source/stylus/app/_animations.styl
@keyframes fadeIn
  from
    opacity 0
  to
    opacity 1

@keyframes fadeOut
  from
    opacity 1
  to
    opacity 0


@keyframes bounce
  0%
    transform scale(0.75)
  50%
    transform scale(1.25)
  100%
    transform scale(1)


@keyframes slideInUp
  from
    transform translateY(100%)
    opacity 0.5
  to
    transform translateY(0)
    opacity 1

@keyframes slideOutUp
  from
    transform translateY(0)
    opacity 1
  to
    transform translateY(100%)
    opacity 0.5


@keyframes slideInRight
  from
    transform translateX(100%)
    opacity 0.5
  to
    transform translateX(0)
    opacity 1

@keyframes slideOutRight
  from
    transform translateX(0)
    opacity 1
  to
    transform translateX(100%)
    opacity 0.5


@keyframes slideInDown
  from
    transform translateY(-100%)
    opacity 0.5
  to
    transform translateY(0)
    opacity 1

@keyframes slideOutDown
  from
    transform translateY(0)
    opacity 1
  to
    transform translateY(-100%)
    opacity 0.5


@keyframes slideInLeft
  from
    transform translateX(-100%)
    opacity 0.5
  to
    transform translateX(0)
    opacity 1

@keyframes slideOutLeft
  from
    transform translateX(0)
    opacity 1
  to
    transform translateX(-100%)
    opacity 0.5

